change password visibility fix

--- a/css/changepassword.css
+++ b/css/changepassword.css
@@ -101,3 +101,28 @@ a{
     font-weight: 600;
     font-size: 12px;
 }
+.eye-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+.eye-icon svg {
+    width: 15px;
+    height: 15px;
+    stroke: #333;
+}
+.eye-icon svg{
+    width: 15px;
+    height: 15px;
+    stroke: #333;
+}
+.password-container{
+    width: 100%;
+    display: flex;
+    /* border: 1px solid black; */
+    position: relative;
+}
